@@ -110,7 +110,7 @@ public class GitHubRequest implements GitHubConnectorRequest {
                 // backward compatibility
                 apiUrl = GitHubClient.GITHUB_URL;
             }
-            return new URL(apiUrl + tailApiUrl);
+            return new URI(apiUrl + tailApiUrl).toURL();
         } catch (Exception e) {
             // The data going into constructing this URL should be controlled by the GitHub API framework,
             // so a malformed URL here is a framework runtime error.
